--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1076,6 +1076,11 @@ cursor: pointer;
   @include inbutton("inherit");
 }
 
+.navbar__logoutbutton {
+    @include outbutton("inherit");
+    font-weight: 600;
+}
+
 
 ///////////////////////////////////////////////////////////////////////////////////////////////////
 /* 3.1.3 SearchInput.js */
