--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -12367,6 +12367,34 @@ input[type=text].details--set {
   }
 }
 
+.navbar__logoutbutton {
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 0.1em 0.1em 0.2em black;
+  background-color: inherit;
+  border: 0;
+  color: #B6EE1A;
+  outline: none !important;
+  background: "inherit";
+  height: 60px;
+  border-radius: 5px;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  font-weight: 600;
+}
+
+.navbar__logoutbutton:hover, .navbar__logoutbutton:focus, .navbar__logoutbutton:active, .navbar__logoutbutton:checked {
+  color: white;
+  text-decoration: none !important;
+}
+
+@media (max-width: 576px) {
+  .navbar__logoutbutton {
+    font-size: 16px !important;
+  }
+}
+
 /* 3.1.3 SearchInput.js */
 @media (max-width: 991px) {
   .searchbutton__text {
