--- a/mLingo/ClientApp/src/styles/Main.scss
+++ b/mLingo/ClientApp/src/styles/Main.scss
@@ -107,6 +107,10 @@
     @extend .col-12;
 }
 
+.details__body{
+    @extend .col-7;
+}
+
 .details__img{
     @extend .img-fluid;
     margin: 0 25px;
@@ -120,6 +124,7 @@
     border: 1px solid $dark-blue;
     border: 1px solid #B2B2B2;
     border-radius: 10px;
+    @extend .col-10;
 }
 
 .details__title{
@@ -128,7 +133,8 @@
 }
 
 .details__buttons{
-    @extend .flex--between;
+    @extend .flex--between, .col-10, .p-0;
+
 }
 
 .create__more{
@@ -150,8 +156,9 @@
 /* --- --- 1.1.3 CollectionFlashcard */
 //////////////////////////////////////////////////////
 
+
 .flashcard__container{
-    @extend .col-12;
+    @extend .col-12, .my-5;
     display: flex;
 }
 
@@ -196,18 +203,54 @@
 /* --- --- 1.1.4 CollectionScreen */
 //////////////////////////////////////////////////////
 
+.collection__total{
+    @extend .flex--center;
+    flex-wrap: wrap;
+    svg{
+        margin-top: 40px;
+        height: 75px;
+        width: 75px;
+    }
+}
+
+.collection__revised{
+    @extend .col-12;
+    text-align: center;
+    font-size: 30px;
+}
+
+.collection__options{
+    @extend .col-3;
+    flex-wrap: wrap;
+}
+
+.collection__button{
+    @extend .green--button, .flex--center;
+    width: 180px;
+    margin: 10px 0;
+    svg{
+        margin: 0 5px;
+    }
+}
+
 .collection__container{
   @extend .all__containers__in__user__section;
   padding: 20px;
 }
 
-.collection__info{
+.collection__center{
     @extend .flex--around;
     flex-wrap: wrap;
     background-color: #fff;
     padding: 20px;
     margin: 20px;
     border-radius: 25px;
+    box-shadow: 0px 6px 8px #00000029;
+}
+
+.collection__info{
+    @extend .col-9;
+    margin: 10px 0;
 }
 
 .collection__title, .collection__description{
