--- a/mLingo/ClientApp/src/styles/Main.scss
+++ b/mLingo/ClientApp/src/styles/Main.scss
@@ -207,16 +207,17 @@
     @extend .flex--center;
     flex-wrap: wrap;
     svg{
-        margin-top: 40px;
-        height: 75px;
-        width: 75px;
+        margin-top: 50px;
+        height: 70px;
+        width: 70px;
     }
 }
 
 .collection__revised{
     @extend .col-12;
     text-align: center;
-    font-size: 30px;
+    font-size: 28px;
+    margin-bottom: 10px;
 }
 
 .collection__options{
@@ -273,6 +274,56 @@
     font-size: 1.5em;
     color: $dark-blue;
 }
+
+
+//////////////////////////////////////////////////////
+/* --- --- 1.1.6 CollectionLearn */
+//////////////////////////////////////////////////////
+
+.learn__dashbord{
+    @extend .flex--complet, .col-9;
+    margin: 0px 50px 50px 0;
+}
+
+.learn__details{
+    @extend .col-4;
+}
+
+.learn__img{
+    @extend .details__img;
+    margin: 20px  0;
+}
+
+.learn__slider{
+    margin-top:100px;
+    width: 400px;
+    height: 250px;
+    text-align: center;
+    background: white;
+    border-radius: 25px;
+    box-shadow: 0px 6px 8px #00000029;
+}
+
+.learn__title{
+    font-size: 38px;
+    font-weight: bold;
+}
+
+.learn__body{
+    @extend .col-8;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.learn__button{
+    @extend .green--button;
+    width: 200px;
+    margin: 20px;
+}
+
+
 
 //////////////////////////////////////////////////////
 /* --- --- 1.2.2 SetScreen */
